Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36190

Intel TSX-NI can cause a significant regression when TAA mitigation is needed

    XMLWordPrintable

Details

    • Related to performance
    • Some lock elision code that was detrimental to performance was removed.
    • Q3/2025 Maintenance, Q4/2025 Server Maintenance

    Description

      alessandro.vetere provided some performance testing results from a system where a transaction asynchronous abort (TAA) mitigation was enabled.

      It would seem to be necessary to disable the use of hardware memory transactions on affected systems, at least in the function buf_page_optimistic_fix() but possibly across the board. A straightforward change on Linux would be to revise the detection function bool transactional_lock_enabled() so that it would avoid setting have_transactional_memory=true if the file /sys/devices/system/cpu/vulnerabilities/tsx_async_abort is readable and contains anything else than the string Not affected.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Alessandro Vetere Alessandro Vetere
              Steve Shaw Steve Shaw
              Votes:
              2 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 2h 31m
                  4d 2h 31m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.