MDEV-36190: Optimize transaction_lock_guard use

buf_pool_t::page_guess(): Avoid a memory transaction, because
we would be checking several conditions inside it.

buf_pool_t::page_hash_table::lock_and_append(): A new function,
used in two places. Attempt to use a simple memory transaction
for inserting the first bucket of a chain. For any more complex
case, fall back to normal latching.

buf_pool_t::page_hash_table::append(): Define non-inline.

buf_pool_t::page_hash_table::replace(),
buf_pool_t::page_hash_table::remove(): Move the inline definition
to the compilation unit of the only caller, to declutter the header.

buf_page_create_low(): Invoke buf_page_t::set_state() before inserting
into the buf_pool.page_hash. It is safe to do this, because we are
holding buf_pool.mutex.