storage/innobase/buf/buf0buf.cc
@@ -2619,11 +2619,12 @@ buf_block_t *buf_pool_t::page_fix(const page_id_t id,
   }
 }
 
-TRANSACTIONAL_TARGET
 uint32_t buf_pool_t::page_guess(buf_block_t *b, page_hash_latch &latch,
                                 const page_id_t id) noexcept
 {
-  transactional_shared_lock_guard<page_hash_latch> g{latch};
+  /* On at least two Intel Xeon of different generation, it turns out
+  that transactional_shared_lock_guard would perform worse here. */
+  latch.lock_shared();
 #ifndef HAVE_UNACCESSIBLE_AFTER_MEM_DECOMMIT
   /* shrunk() and my_virtual_mem_decommit() could retain the original
   contents of the virtual memory range or zero it out immediately or
@@ -2635,7 +2636,10 @@ uint32_t buf_pool_t::page_guess(buf_block_t *b, page_hash_latch &latch,
 #else
   /* shrunk() made the memory inaccessible. */
   if (UNIV_UNLIKELY(reinterpret_cast<char*>(b) >= memory + size_in_bytes))
+  {
+    latch.unlock_shared();
     return 0;
+  }
 #endif
   const page_id_t block_id{b->page.id()};
 #ifndef HAVE_UNACCESSIBLE_AFTER_MEM_DECOMMIT
@@ -2644,9 +2648,10 @@ uint32_t buf_pool_t::page_guess(buf_block_t *b, page_hash_latch &latch,
   MEM_MAKE_DEFINED(&block_id, sizeof block_id);
 #endif
 
+  uint32_t state= 0;
   if (id == block_id)
   {
-    uint32_t state= b->page.state();
+    state= b->page.state();
 #ifndef HAVE_UNACCESSIBLE_AFTER_MEM_DECOMMIT
     /* shrunk() may have invoked MEM_UNDEFINED() on this memory to be able
     to catch any unintended access elsewhere in our code. */
@@ -2656,10 +2661,11 @@ uint32_t buf_pool_t::page_guess(buf_block_t *b, page_hash_latch &latch,
     avoid a race condition by looking up the block via page_hash. */
     if ((state >= buf_page_t::FREED && state < buf_page_t::READ_FIX) ||
         state >= buf_page_t::WRITE_FIX)
-      return b->page.fix();
+      state= b->page.fix();
     ut_ad(b->page.frame);
   }
-  return 0;
+  latch.unlock_shared();
+  return state;
 }
 
 /** Low level function used to get access to a database page.
@@ -3047,6 +3053,74 @@ void buf_block_t::initialise(const page_id_t page_id, ulint zip_size,
 }
 
 TRANSACTIONAL_TARGET
+void
+buf_pool_t::page_hash_table::lock_and_append(buf_pool_t::hash_chain &chain,
+                                             buf_page_t *bpage) noexcept
+{
+  page_hash_latch &hash_lock= buf_pool.page_hash.lock_get(chain);
+#ifndef NO_ELISION
+  mysql_mutex_assert_owner(&buf_pool.mutex);
+  ut_ad(!bpage->in_page_hash);
+  ut_ad(!bpage->hash);
+  ut_d(bpage->in_page_hash= true);
+
+  if (xbegin())
+  {
+    if (!hash_lock.is_locked() && !chain.first)
+    {
+      chain.first= bpage;
+      xend();
+      return;
+    }
+    else
+      xend();
+  }
+#endif
+
+  hash_lock.lock();
+  append(chain, bpage);
+  hash_lock.unlock();
+}
+
+void
+buf_pool_t::page_hash_table::append(buf_pool_t::hash_chain &chain,
+                                    buf_page_t *bpage) noexcept
+{
+  mysql_mutex_assert_owner(&buf_pool.mutex);
+  ut_ad(buf_pool.page_hash.lock_get(chain).is_locked());
+  ut_ad(!bpage->in_page_hash);
+  ut_ad(!bpage->hash);
+  ut_d(bpage->in_page_hash= true);
+  buf_page_t **prev= &chain.first;
+  while (*prev)
+  {
+    ut_ad((*prev)->in_page_hash);
+    prev= &(*prev)->hash;
+  }
+  *prev= bpage;
+}
+
+inline void
+buf_pool_t::page_hash_table::replace(buf_pool_t::hash_chain &chain,
+                                     buf_page_t *old,
+                                     buf_page_t *bpage) noexcept
+{
+  mysql_mutex_assert_owner(&buf_pool.mutex);
+
+  ut_ad(old->in_page_hash);
+  ut_ad(bpage->in_page_hash);
+  ut_d(old->in_page_hash= false);
+  ut_ad(bpage->hash == old->hash);
+  old->hash= nullptr;
+  buf_page_t **prev= &chain.first;
+  while (*prev != old)
+  {
+    ut_ad((*prev)->in_page_hash);
+    prev= &(*prev)->hash;
+  }
+  *prev= bpage;
+}
+
 static buf_block_t *buf_page_create_low(page_id_t page_id, ulint zip_size,
                                         mtr_t *mtr, buf_block_t *free_block)
   noexcept
@@ -3190,15 +3264,11 @@ retry:
 
   ut_ad(bpage->state() == buf_page_t::MEMORY);
   bpage->lock.x_lock();
+  bpage->set_state(buf_page_t::REINIT + 1);
 
   /* The block must be put to the LRU list */
   buf_LRU_add_block(bpage, false);
-  {
-    transactional_lock_guard<page_hash_latch> g
-      {buf_pool.page_hash.lock_get(chain)};
-    bpage->set_state(buf_page_t::REINIT + 1);
-    buf_pool.page_hash.append(chain, bpage);
-  }
+  buf_pool.page_hash.lock_and_append(chain, bpage);
 
   if (UNIV_UNLIKELY(zip_size))
   {
